--- a/eewee-sellsy/changelog
+++ b/eewee-sellsy/changelog
@@ -1,3 +1,7 @@
+= 1.0.5 =
+* Add reCaptcha form ticket support
+* Add reCaptcha form contact
+
 = 1.0.4 =
 * Change prospect and opportunity
 * Change bdd (contact)
