--- a/eewee-sellsy/changelog
+++ b/eewee-sellsy/changelog
@@ -1,3 +1,9 @@
+= 1.0.11 =
+* Wording
+
+= 1.0.10 =
+* Fix install
+
 = 1.0.9 =
 * StickyNote on third, contact or opportunity
 * Add setting "name of opportunity"
