--- a/eewee-sellsy/changelog
+++ b/eewee-sellsy/changelog
@@ -1,5 +1,8 @@
+= 1.11 =
+* Add deadline on opportunity
+
 = 1.1 =
-* Create table version
+* Create table version and update version auto
 
 = 1.0.14 =
 * Add CF SimpleText
