--- a/eewee-sellsy/changelog
+++ b/eewee-sellsy/changelog
@@ -1,5 +1,5 @@
 = 1.12 =
-* Add "assigned to" and "probability" on opportunity
+* Add "assigned to", "probability" on opportunity and PHPUNIT
 
 = 1.11 =
 * Add deadline on opportunity
